<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>org.liquigraph</groupId>
    <artifactId>liquigraph-parent</artifactId>
    <version>3.1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>liquigraph-parent</name>
    <url>http://www.liquigraph.org/</url>

    <properties>
        <encoding>UTF-8</encoding>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <neo4j.version>3.0.0</neo4j.version>
        <slf4j.version>1.7.25</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <!-- JaCoCo needs this as a property -->
        <argLine>-Duser.language=en -Xmx1024m</argLine>
        <generateBackupPoms>false</generateBackupPoms>
        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
        <jetty.version>9.2.9.v20150224</jetty.version>
        <neo4j-jdbc.version>3.1.0</neo4j-jdbc.version>
    </properties>

    <modules>
        <module>liquigraph-core</module>
        <module>liquigraph-maven-plugin</module>
        <module>liquigraph-cli</module>
        <module>liquigraph-spring-boot-starter</module>
        <!-- Liquigraph integration examples -->
        <module>liquigraph-examples/dagger2</module>
        <module>liquigraph-examples/spring-boot</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>LICENSE_HEADER</header>
                    <includes>
                        <include>**/src/main/java/**</include>
                        <include>**/src/main/resources/**</include>
                        <include>**/src/main/resources-filtered/**</include>
                        <include>**/src/test/java/**</include>
                        <include>**/src/test/resources/**</include>
                    </includes>
                    <excludes>
                        <exclude>**/liquigraph.sh</exclude>
                        <exclude>**/liquigraph.bat</exclude>
                    </excludes>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>3.0.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                  <locale>en_US</locale>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>liquigraph-@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>Apache License</name>
            <url>https://github.com/liquigraph/liquigraph/raw/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/liquigraph/liquigraph</url>
        <connection>scm:git:git@github.com:liquigraph/liquigraph.git</connection>
        <developerConnection>scm:git:git@github.com:liquigraph/liquigraph.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <developers>
        <developer>
            <id>fbiville</id>
            <name>Florent Biville</name>
            <email>florent.biville@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
